     WaitForRing() now takes floating pt timeout arg.
     SpeechBackground() -- clarified in the docstrings that the timeout is an integer seconds.
  * Added 'C' option to Meetme which causes a caller to continue in the dialplan
     when kicked out.
  * Brazilian Portuguese (pt-BR) in VM, and say.c was added via patch from cfassoni.
  * CID matching information is now shown when doing 'dialplan show'.
  * Added maxfiles option to options section of asterisk.conf which allows you to specify
     what Asterisk should set as the maximum number of open files when it loads.
  * Added the jittertargetextra configuration option.
  * Added G729 passthrough support to chan_phone for Sigma Designs boards.
  * Added the parkedcalltransfers option to features.conf
  * Added 's' option to Page application.
  * Added 'E' and 'V' commands to ExternalIVR.
  * Added 'DBDel' and 'DBDelTree' manager commands.
  * Added 'o' and 'X' options to Chanspy.
  * Added the parkedcallreparking option to features.conf
  * SMDI is now enabled in voicemail using the smdienable option.
  * Added zap show version CLI command to chan_zap.
  * Added a new CDR module, cdr_sqlite3_custom.
  * Added a new realtime configuration module, res_config_sqlite
  * Added a new dialplan application, Bridge, which allows you to bridge the
     calling channel to any other active channel on the system.
  * Added support for setting the CoS for VLAN traffic (802.1p).  See the sample
     configuration files for the IP channel drivers.  The new option is "cos".
     This information is also documented in doc/qos.tex, or the IP Quality of Service
     section of asterisk.pdf.
  * The built-in method for doing attended transfers has been updated to
     include some new options that allow you to have the transferee sent
     back to the person that did the transfer if the transfer is not successful.
     See the options "atxferdropcall", "atxferloopdelay", and "atxfercallbackretries"
     in features.conf.sample.